# OpenEnv-job-assistant

./: .gitignore  Dockerfile  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  serve.py  tasks.py  test_env.py  test_graders.py  test_tasks.py
env/: environment.py  models.py
graders/: cover_letter_grader.py  email_grader.py  interview_grader.py  linkedin_grader.py  resume_grader.py  task_manager.py
server/: DockerFile  app.py  inference.py  requirements.txt
