[project]
name = "openenv-job-assistant"
version = "0.1.0"
description = "AI-powered job assistant environment"
authors = [{ name = "Yash Sonawane" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"