[project]
name = "openenv-job-assistant"
version = "0.1.0"
description = "AI-powered job assistant environment"
authors = [{ name = "Yash Sonawane" }]

dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.43.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "openai==2.30.0",
    "openenv-core==0.2.3"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
